# C-Rust-Interop

./: .gitignore  Cargo.toml
c_to_rust/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs
c_to_rust/include/: bindings.h
c_to_rust/src/: lib.rs  main.cpp  rest.rs  small_test.rs
rust_to_c/: .gitignore  Cargo.toml  build.rs
rust_to_c/src/: bindings.rs  main.rs
